clarat-org/clarat#1042 update about us
I updated/deleted the data/fotos, but maybe we should wait for the text
from Nicole before deploying?

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1020,10 +1020,8 @@ ar:
       jule: باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي هوم لإدوارد شارب.
       julia: خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أغنيتها المفضلة هي ريكونر ل. راديوهيد.
       julia_b: درست خدمة إجتماعية. وعملت كثيراً مع الأطفال والشبان. يمكنها أن تعرف كيف يشعر الآخرون. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي نانتيس ل. بيروت
-      julian: خبير في الإقتصاد الإجتماعي. هذا يعني أنه يعرف الكثير عن الإقتصاد والمجتمع. هو على دراية جيدة أيضا بالكمبيوتر. في كلارات هو عضو في فريق البحث كما يقوم بأعمال تقنية أخرى. أغنيته المفضلة هي آول يو نيد ل. سابليما.
       juliane: درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي إيسي ل.ذا كومودورس.
       karo: درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف ل.بيرل جام.
-      katinka: أخصائية نفسية. هذا يعني أنها تستطيع أن تفهم السلوك والمشاعر الإنسانية جيدا. في كلارات هي عضوة في الفريق البحثي. وهي تقوم بالبحث لكي تكتشف من يستخدم كلارات. أغنيتها المفضلة هي زا جريتست ل. كات بور.
       katja: درست علوم  وأدب اللغة الألمانية. تجيد الألمانية والنصوص الصعبة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ميستيريس ل.بيت جيبونس.
       konstantin: مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي توو لونج ل. دافت بونكت.
       laura_i: متخصصة في العلوم الثقافية والسفريات. قادرة على التنظيم الجيد. تعتني بالشكل العام ووتحب أن تتعلم أشياء جديدة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي برود ماري ل.إكا أوند تينا.
@@ -1035,7 +1033,6 @@ ar:
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي ديجيتال لوف ل.دافت بونك.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي مي إن يو ل.كونفينينس.
-      nicole: درست علوم التواصل بين الثقافات. هذا يعني أنها تعرف الكثير عن الثقافات و اللغة. قادرة على اتخاذ قرارات جيدة. هي مديرة لفريق البحث. أغنتها المفضلة هي بالابرا مي آمور ل. شاكا بونك.
       nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت.
       philipp: درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي زس إز أور سينس لأستروناوتليس
       sabine: هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا ل.كينو.
@@ -1045,6 +1042,13 @@ ar:
       tine: أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي سيرفيف إت ل. جوستبويت.
       title: معلومات عن فريق عمل كلارات
       verena: درست علوم الأجناس. هذا يعني أنها تعرف الكثير عن الأجناس المختلفة وكذلك عن مجتمعنا. يمكنها تنسيق الأمور وترتيبها. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي ميتروبوليس ل. نيونشفارتس.
+      ann-sophie: 
+      damjan: 
+      fabian: 
+      magdalena: 
+      marie: 
+      omar: 
+      patrick: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1271,3 +1275,7 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
