--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -1079,10 +1079,8 @@ fa:
       jule: او محقق در مسائل صلح و مناقشه می باشد.این بدین معنی است که او اطلاعات زیادی در مورد جنگ و تنش مربوط به آن دارد.او به خوبی راه حل پیدا می کند.در clarat در تیم تحقیق فعالیت می کند و بازنگری دنیای پناهندگان صفحه ما را به عهده دارد.موسیقی مورد علاقه او Lieblingssong ist Home از Edward Sharpe می باشد.
       julia: او کارشناس زبان آلمانی است.این بدین معنی است که او اطلاعات زیادی در مورد متن های زبان آلمانی دارد.او به خوبی می تواند بنویسد و مسائل  را به راحتی توضیح دهد.در در clarat در تیم تحقیق فعالیت می کند و کارشناس بخش زبان clarat می باشد.موسیقی مورد علاقه او Reckoner از Radiohead می باشد.
       julia_b: او در رشته خدمات اجتماعی تحصیل کرده است و سابقه کار با کودکان و جوانان را دارد.او به خوبی می تواند خود را در شرایط دیگران قرار دهد.در کلارات در تیم تحقیق فعالیت دارد و موسیقی مورد علاقه او Nantes از Beirut می باشد.
-      julian: او کارشناس اقتصاد اجتمایی است.این بدین معنی است که او اطلاعات زیادی در مورد اقتصاد٬ اجتماع و کامپیوتر دارد.در clarat در تیم تحقیق و امور فنی فعالیت می کند.موسیقی مورد علاقه او  ist All You Need از Sublime می باشد.
       juliane: او در رشته مدیریت اجرایی کسب و کار و صنعت توریسم تحصیل کرده است.او به خوبی نقشه طراحی می کند و را حل های خلاقانه ارائه می دهد.در clarat در کار بازاریابی فعالیت می کند.موسیقی مورد علاقه او Easy از The Commodores می باشد.
       karo: او در رشته اروپا شناسی تحصیل کرده است.این بدین معنی است که او در مورد سیاست اروپا اطلاعات زیادی دارد و می تواند خوب سازمان دهی کند.در clarat در تیم تحقیق وکار با کتاب راهنمای ما فعالیت دارد.موسیقی مورد علاقه او  t Alive از Pearl Jam می باشد.
-      katinka: او کارشناس روانشناسی می باشد.این بدین معنی است که او رفتار و احساسات انسانها را به خوبی درک می کند.در clarat در تیم تحقیق فعالیت می کند و او مارا در جستجوی کسیانی که از clarat استفاده می کنند کمک می کند.موسیقی مورد علاقه او Greatest از Cat Power می باشد.
       katja: او کارشناس زبان آلمانی می باشد و در مورد متن های پیچیده و همچنین زبان آلمانی اطلاعات زیادی دارد.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Mysteries از Beth Gibbons می باشد.
       konstantin: او کارشناس٬ برنامه نویس و توسعه دهنده وبسایت است.این بدین معنی است که او به خوبی می تواند صفحات اینترنتی را برنامه نویسی کند و همیشه راه حل های خوبی را ارائه می دهد.در clarat در تیم IT و انجام کارهای صفحه اینرنتی ما فعالیت دارد.موسیقی مورد علاقه او Too Long ز  Daft Punk می باشد.
       laura_i: او کارشناس مسافرتی و مطالعات فرهنگی می باشد.او به خوبی می تواند برنامه ریزی کند.او به بازنگری و در یادگیری چیزهای جدید علاقه زیادی دارد.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او Proud Mary از Ike und Tina Turner می باشد.
@@ -1094,9 +1092,6 @@ fa:
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
       nathalie: او در رشته حقوق بشر و سیاست بین الملل تحصیل کرده است.او به خوبی مو تواند توضیح دهد و همچنین گوش دهد.در clarat در تیم تحقیق فعالیت دارد.موسیقی مورد علاقه او You از Kings of Convenience می باشد.
-      nicole: |-
-        او در رشته علوم اجتمایی تحصیل کرده است.این بدین معنی است که او اطلاعات زیادی در مورد فرهنگ و زبان های مختلف دارد.او بدرستی تصمیم می گیرد.او هدایت کننده تیم تحقیق کننده است و موسیقی مورد علاقه او Palabra Mi Amor از
-        Shaka Ponk می باشد.
       nils: او کارشناس علوم کامپیوتر است.این بدین معنی است که او می تواند به خوبی یرنامه های کامپیوتری و صفحات اینترنت را برنامه ریزی کند.او همیشه راه حل مناسب به ذهنش می رسد و سریع یاد می گیرد.در clarat در تیم IT  فعالیت دارد.موسیقی مورد علاقه او Jein از Fettes Brot می باشد.
       philipp: او در رشته تاریخ٬ سیاست و حقوق تحصیل کرده است.او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند.موسیقی مورد علاقه او his Is Our Science از Astronautalis می باشد.
       sabine: او کارشناس جامعه شناسی است.این بدان معنی است که او اطلاعات زیادی در مورد اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند و قوانین مربوط به پناهندگان را به ما توضیح می دهد.موسیقی مورد علاقه او Vesna از Kino می باشد.
@@ -1108,6 +1103,13 @@ fa:
       tine: او کارشناس تعلیم و تربیت اجتماعی است.او می تواند به خوبی به آدمها گوش دهد.او همچنین نویسنده است و این بدین معنی است که او می تواند به خوبی داستانهای زیبایی را بنویسد.در clarat در تیم تحقیقات فعالیت دارد و کارشناس تیم زبان ما می باشد.موسیقی مورد علاقه او Survive It از Ghostpoet.
       title: در مورد ما
       verena: او کارشناس مسائل سیاسی است.این بدین معنی است که او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند اطلاعات جمع آوری کند.در clarat در تیم تحقیقات و فرهنگ لغت فعالیت دارد.موسیقی مورد علاقه او Lose It از Oh Wonder می باشد.
+      ann-sophie: 
+      damjan: 
+      fabian: 
+      magdalena: 
+      marie: 
+      omar: 
+      patrick: 
     agb:
       heading: اطلاعات قانونی
       text_html: |-
@@ -1275,3 +1277,7 @@ fa:
     new:
       button: پیغام دریافت شد
       email_placeholder: آدرس ایمیل
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
