--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1136,10 +1136,8 @@ ru:
       jule: Она - исследовательница мирных времен и конфликтов. Это значит, что она много знает о конфликтах и войне. Она хорошо умеет решать проблемы. В clarat она работает в исследовательской команде. Она в курсе событий в странах наших беженцев. Её любимая песня Home исполнителя Edward Sharpe.
       julia: Юлия Германист. Это значит, что она хорошо разбирается в текстах и в немецком языке. Она может хорошо писать у понятно объяснять вещи. В clarat она работает в команде сбора информации и является экспертом по языку clarat. Её любимая песня Reckoner от группы  Рэдиохэд (Radiohead).
       julia_b: Она изучала социальную работу. Она долгое время работала с детьми и подростками. Она умеет ставить себя на место других. В Clarat она работает в исследовательской команде. Её любимая песня - Nantes от Beirut.
-      julian: Юлиан Социальный экономист. Это значит, что он знает много о экономике и обществе. Он хорошо разбирается в компьютерах. В clarat он работает в команде сбора информации и занимается техническими вопросами. Его любимая песня All You Need от Сублим (Sublime).
       juliane: Она изучала управление предприятием и туризм. Она хорошо умеет планировать. И всегда находит креативные решения. В Clarat она следит за маркетингом. Её любимая песня - группы The Commodores.
       karo: Она изучала европейские науки. Следовательно, она знает много о европейской политике. У нее хорошие организаторские способности. В clarat она работает в исследовательской группе и занимается подготовкой нашего справочника. Ее любимая песня — Alive от Pearl Jam.
-      katinka: Она психолог. Это значит, что она хорошо понимает поведение и чувства людей. В clarat она работает в исследовательской группе. И она выясняет, кто пользуется всей системой clarat. Ее любимая песня — The Greatest от Cat Power.
       katja: Она германист. Она хорошо разбирается в сложных текстах и немецком языке. В clarat она работает в исследовательской группе. Ее любимая песня — Mysteries от Beth Gibbons.
       konstantin: 'Константин Интернет-разработчик. Это значит, что он умеет программировать страницы в интернете. Он всегда хорошо разрешает проблемы. В clarat он работает в команде технической инвентаризации. Его любимая песня Too Long от  французской группы Дафт Панк (Daft Punk). '
       laura_i: Она туристический агент и культуролог. У нее хорошие организаторские способности. Она всегда видит общую картину и охотно изучает новые вещи. В clarat она работает в исследовательской группе. Ее любимая песня — Proud Mary от Ike und Tina Turner.
@@ -1151,7 +1149,6 @@ ru:
       michaela: Она изучала экономическую информатику. Она может воодушевлять других людей. И она хорошо разбирается в новых СМИ. В clarat она работает в исследовательской группе и обеспечивает хорошую работу нашего сайта. Ее любимая песня — Digital Love от Daft Punk.
       nahla: Она археолог. Он много знает об истории людей. Он может быстро работать. В clatrat она работает в команде переводчиков и переводит clarat на арабский язык.  Ее любимая песня — Nassam Allina El Hawa от Fayrouz.
       nathalie: Она изучала права человека и международные политические исследования. Она умеет хорошо объяснять. И хорошо слушать. В Clarat она работает в исследовательской команде. Её любимая песня - Me in You от Kings of Convenience.
-      nicole: Николь Изучала межкультурную коммуникацию. Это значит, что она знает много о разных культурах и языках. Она хорошо может принимать решения. В clarat она работает в команде сбора информации. Её любимая песня Palabra Mi Amor от Шака Понк (Shaka Ponk).
       nils: Нильс Специалист по информатике. Это значит, что он хорошо умеет программировать компьютерные программы и сайты в интернете. Он хорошо решает проблемы и быстро осваивает новые вещи. В clarat он работает команде технической информации. Его любимая песня Jein от группы Фэттэс Брот (Fettes Brot).
       philipp: Имеет истории, политики и права исследований. Он много знает о политике и обществе. Он может понять сложные вещи. В Clarat он находится в исследовательской группе. Его любимая песня This Is Our Наука Astronautalis.
       sabine: Является ли социолог. То есть, они знают много о компании. Вы можете понять сложные вещи. В Clarat он находится в исследовательской группе. И она объясняет немецкий закон о предоставлении убежища. ее любимая песня Vesna Kino.
@@ -1161,6 +1158,13 @@ ru:
       tine: Она - социальный педагог. Она умеет выслушивать людей. Кроме того, она - писатель. Это значит, что она хорошо владеет языком и пишет хорошие истории. В clarat она работает в исследовательской команде. Её любимая песня Survive от Ghostpoet.
       title: Über Uns
       verena: Оан изучала гендерные исследования. Это значит, что она много знает о разных гендерах и о нашем обществе. Она хорошо организовывает. В clarat она работает в исследовательской команде . Её любимая песня - Metropolis отNeonschwarz.
+      ann-sophie: 
+      damjan: 
+      fabian: 
+      magdalena: 
+      marie: 
+      omar: 
+      patrick: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1381,3 +1385,7 @@ ru:
     new:
       button: Получить сообщение
       email_placeholder: E-Mail адрес
+  offer:
+    stamp:
+      target_audience:
+        refugees_adolescents: 
